--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -76,7 +76,8 @@
             <div class="content">
                 <h2>Register</h2>
 
-            <form th:action="@{/register}" method="get" th:object="${userRegistration}">
+            <form th:action="@{/register}" method="post" th:object="${userRegistration}">
+
 				    <label for="u_id">UserID:</label>
                     <input type="text" id="u_id" name="u_id" th:field="*{u_id}" required><br>
                     
