--- a/src/main/resources/templates/About.html
+++ b/src/main/resources/templates/About.html
@@ -309,14 +309,14 @@ transform: translateY(-24px);
 <div class="icon"><b></b><i class="fa-solid fa-phone"></i></div> 
 <div class="text"> 
  <h3>Phone</h3> 
- <p>8299173654</p>
+ <p>7617610807</p>
  </div>
   </div> 
   <div class="box"> 
 <div class="icon"><b></b><i class="fa-solid fa-envelope"></i></div> 
 <div class="text"> 
  <h3>Email</h3> 
- <p>scanurag@gmail.com</p>
+ <p>deeptimaankrishnajadaun@gmail.com</p>
  </div>
   </div> 
 <div class="contactForm"> 
